[package]
name = "netwalk"
version = "0.1.0"
authors = ["dr4ds <lubievi@gmail.com>"]
edition = "2018"

[dependencies]
rand="0.7.3"
hex="0.4.0"
actix-rt = "1.0.0"
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
nanoid="0.2.0"
serde = "1.0.104"
serde_json = "1.0.44"
env_logger = "0.7.1"
num-traits = "0.2"
num-derive = "0.3"